@@ -1,6 +1,10 @@
 FlightPath 5.x Changelog
 ========================
 
+2016-10-08
+  Added default setting to stop filling courses into a group once the min hours are met.
+  
+
 2016-09-29
   Fixed a bug with pie charts where it was not taking a group's min_hours into account.  Also, told it to ignore
   the "hours_required_by_type" in pie chart calculations, since a group can only be assigned to one requirement type
